--- a/slides.pod
+++ b/slides.pod
@@ -140,7 +140,7 @@ Linked music construction modules are those mentioned in this presentation.
 
 use MIDI::Util qw(setup_score);
 
-my $score = setup_score(); # default piano, volume, bpm, etc
+my $score = setup_score(); # Default piano, volume, bpm, etc
 
 $score->synch(
     sub { bass($score) },
@@ -163,7 +163,7 @@ These slides show complete programs.
 
 sub bass {
     my ($score) = @_;
-    for my $note (qw(C3 E3 C3 G3)) {
+    for my $note (qw(C3 E3 C3 G3)) {    # <- Static notes
         $score->n('wn', $note);
     }
 }
@@ -189,13 +189,13 @@ sub treble {
 # Using random pitches instead of static
 
 use MIDI::Util qw(setup_score set_chan_patch);
-use Music::Scales qw(get_scale_MIDI);
+use Music::Scales qw(get_scale_MIDI); # <- NEW
 
-my $score = setup_score(bpm => 120);
+my $score = setup_score(bpm => 120);  # <- NEW ARG
 $score->synch(
     sub { bass($score) },
     sub { treble($score) },
-) for 1 .. 4;
+) for 1 .. 4;                         # <- NEW LOOP
 
 $score->write_score("$0.mid");
 
@@ -214,13 +214,13 @@ Shows Music::Scales and score settings.
 sub bass {
     my ($score) = @_;
 
-    set_chan_patch($score, 0, 35);
+    set_chan_patch($score, 0, 35);                      # Fretless on channel 0
 
-    my @pitches = get_scale_MIDI('C', 2, 'pentatonic');
+    my @pitches = get_scale_MIDI('C', 2, 'pentatonic'); # Non-clashing scale octave
 
     for my $n (1 .. 4) {
-        my $pitch = $pitches[int rand @pitches];
-        $score->n('hn', $pitch);
+        my $pitch = $pitches[int rand @pitches];        # Random pitch
+        $score->n('hn', $pitch);                        # Add note to score
     }
 }
 
@@ -228,7 +228,7 @@ sub bass {
 
 =begin note
 
-Fretless bass patch on channel zero. Scale pitches in a non-clashing scale. Add random pitches to the score.
+...
 
 =end note
 
@@ -238,10 +238,10 @@ Fretless bass patch on channel zero. Scale pitches in a non-clashing scale. Add 
 
 sub treble {
     my ($score) = @_;
-    set_chan_patch($score, 1, 0);
+    set_chan_patch($score, 1, 4); # Electric piano on ch 1
     my @pitches = (
         get_scale_MIDI('C', 4, 'major'),
-        get_scale_MIDI('C', 5, 'major'),
+        get_scale_MIDI('C', 5, 'major'), # <- TWO OCTAVES
     );
     for my $n (1 .. 4) {
         my $pitch = $pitches[int rand @pitches];
@@ -255,7 +255,7 @@ sub treble {
 
 (code-2-random.pl)
 
-Treble uses two octaves, as opposed to the bass part's one.
+...
 
 =end note
 
@@ -266,13 +266,13 @@ Treble uses two octaves, as opposed to the bass part's one.
 # Play a list of named chords held for a whole note each
 
 use MIDI::Util qw(setup_score midi_format);
-use Music::Chord::Note ();
 use Music::Scales qw(get_scale_MIDI);
+use Music::Chord::Note ();            # <- NEW!
 
 my $score = setup_score();
 $score->synch(
     sub { chords($score) },
-    #sub { treble($score) },
+    #sub { treble($score) }, # YMMV!
 );
 
 $score->write_score("$0.mid");
@@ -295,7 +295,7 @@ sub chords {
     my $mcn = Music::Chord::Note->new;
 
     for my $named (qw(Cm7 F7 BbM7 EbM7 Adim7 D7 Gm Cm7)) {
-        my @chord = $mcn->chord_with_octave($named, 4);
+        my @chord = $mcn->chord_with_octave($named, 4); # Lowest note in octave 4
         @chord = midi_format(@chord);
         # [ 'C4', 'Ds4', 'G4', 'As4' ], etc.
         $score->n('wn', @chord);
