--- a/slides.pod
+++ b/slides.pod
@@ -388,7 +388,7 @@ my @pitches = get_scale_MIDI($note, $octave, $scale);
 
 my $voice = Music::VoiceGen->new(
     pitches   => \@pitches,
-    intervals => [qw/-4 -3 -2 2 3 4/],
+    intervals => [qw/-4 -3 -2 2 3 4/], # Allowed interval jumps
 );
 
 # main phrase voices
