--- a/slides.pod
+++ b/slides.pod
@@ -415,7 +415,7 @@ for my $i (1 .. $bars) {
         $mdp->add_to_score($self->drummer->score, $motifs[1], \@voices2);
     }   
 
-    $self->drummer->rest($self->drummer->quarter);
+    $self->drummer->rest($self->drummer->quarter); # SAME as $score->r('qn');
 }
 
 =end perl
