--- a/slides.pod
+++ b/slides.pod
@@ -438,7 +438,7 @@ The L<Groove-Tool|https://github.com/ology/Groove-Tool>,
 L<Rock-Tool|https://github.com/ology/Rock-Tool> and
 L<Jazz-Tool|https://github.com/ology/Jazz-Tool> on GitHub
 
-My experiments with MIDI-Perl L<on GitHub|https://github.com/ology/Music/>
+My experiments with MIDI-Perl are L<on GitHub|https://github.com/ology/Music/>
 
 Shameless plug: My L<latest album "XI"|https://ology.net/XI/> is on youtube, spotify, apple music, etc.,
 and includes the partially algorithmic tune
