--- a/slides.pod
+++ b/slides.pod
@@ -189,7 +189,7 @@ sub treble {
 # Using random pitches instead of static
 
 use MIDI::Util qw(setup_score set_chan_patch);  # <- NEW IMPORT
-use Music::Scales qw(get_scale_MIDI);  # <- NEW
+use Music::Scales qw(get_scale_MIDI);  # <- NEW MODULE
 
 my $score = setup_score(bpm => 120);  # <- NEW ARG
 $score->synch(
