--- a/slides.pod
+++ b/slides.pod
@@ -188,14 +188,14 @@ sub treble {
 
 # Using random pitches instead of static
 
-use MIDI::Util qw(setup_score set_chan_patch);  # <- NEW IMPORT
-use Music::Scales qw(get_scale_MIDI);  # <- NEW MODULE
+use MIDI::Util qw(setup_score set_chan_patch);  # <- NEW import
+use Music::Scales qw(get_scale_MIDI);  # <- NEW module
 
-my $score = setup_score(bpm => 120);  # <- NEW ARG
+my $score = setup_score(bpm => 120);  # <- NEW arg
 $score->synch(
     sub { bass($score) },
     sub { treble($score) },
-) for 1 .. 4;  # <- NEW LOOP
+) for 1 .. 4;  # <- NEW loop!
 
 $score->write_score("$0.mid");
 
