--- a/slides.pod
+++ b/slides.pod
@@ -267,9 +267,21 @@ sub treble {
 
 =begin note
 
-(code-2-random.pl)
-
 ...
+
+=end note
+
+=head1 Audio Example 2
+
+=begin html
+
+<audio controls><source type="audio/mp3" src="audio/code-2-random.pl.mp3"></audio>
+
+=end html
+
+=begin note
+
+(code-2-random.pl)
 
 =end note
 
