--- a/slides.pod
+++ b/slides.pod
@@ -332,7 +332,21 @@ sub chords {
 
 =begin note
 
-(code-3-chords.pl)
+...
+
+=end note
+
+=head1 Audio Example 2
+
+=begin html
+
+<audio controls><source type="audio/mp3" src="audio/code-3-chords.pl.mp3"></audio>
+
+=end html
+
+=begin note
+
+(code-2-random.pl)
 
 =end note
 
