--- a/slides.pod
+++ b/slides.pod
@@ -336,11 +336,13 @@ sub chords {
 
 =end note
 
-=head1 Audio Example 2
+=head1 Audio Example 3
 
 =begin html
 
 <audio controls><source type="audio/mp3" src="audio/code-3-chords.pl.mp3"></audio>
+<p></p>
+<audio controls><source type="audio/mp3" src="audio/code-3-chords2.pl.mp3"></audio>
 
 =end html
 
