--- a/slides.pod
+++ b/slides.pod
@@ -62,7 +62,7 @@ G<https://placekitten.com/400/400>
 
 =item *
 
-Applied music theory (i.e. can "exercise" a theory)
+Applied music theory
 
 =item *
 
