--- a/slides.pod
+++ b/slides.pod
@@ -5,6 +5,8 @@ L<Gene Boggs|https://github.com/ology>
 =begin html
 
 <img src="flowchart.png">
+<p></p>
+<audio controls><source type="audio/mp3" src="Eno-2_2.mp3"></audio> (<a href="http://en.wikipedia.org/wiki/Brian+Eno">Brian Eno</a>)
 
 =end html
 
