--- a/slides.pod
+++ b/slides.pod
@@ -6,7 +6,7 @@ L<Gene Boggs|https://github.com/ology>
 
 <img src="flowchart.png">
 <p></p>
-<audio controls><source type="audio/mp3" src="Eno-2_2.mp3"></audio> (<a href="http://en.wikipedia.org/wiki/Brian+Eno">Brian Eno</a>)
+<audio controls><source type="audio/mp3" src="Eno-2_2.mp3"></audio>
 
 =end html
 
