--- a/slides.pod
+++ b/slides.pod
@@ -7,6 +7,7 @@ L<Gene Boggs|https://github.com/ology>
 <img src="flowchart.png">
 <p></p>
 <audio controls><source type="audio/mp3" src="Eno-2_2.mp3"></audio>
+<p style="font-size: medium;">(<a href="http://en.wikipedia.org/wiki/Brian+Eno">Brian Eno</a>)</p>
 
 =end html
 
