--- a/slides.pod
+++ b/slides.pod
@@ -414,14 +414,14 @@ my $d = MIDI::Drummer::Tiny->new(
 
 # Phrase generator for rhythmic motifs
 
-my $mdp = Music::Duration::Partition->new(
+my $phrase = Music::Duration::Partition->new(
     size    => 3,  # number of beats to render
     pool    => [qw(hn dqn qn en)],
     weights => [ 1, 1, 2, 2 ],  # optional
     groups  => [ 1, 1, 1, 2 ],  # optional
 );
 
-my @motifs = $mdp->motifs(2);
+my @motifs = $phrase->motifs(2);
 
 =end perl
 
@@ -459,11 +459,11 @@ Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out there!
 
 for my $i (1 .. $bars) {
     if ($i % 2) {
-        $mdp->add_to_score($self->drummer->score, $motifs[0], \@voices1);
+        $phrase->add_to_score($self->drummer->score, $motifs[0], \@voices1);
     }   
     else {
         my @voices2 = map { $voice->rand } $motifs[1]->@*;
-        $mdp->add_to_score($self->drummer->score, $motifs[1], \@voices2);
+        $phrase->add_to_score($self->drummer->score, $motifs[1], \@voices2);
     }   
 
     $self->drummer->rest($self->drummer->quarter);  # SAME as $score->r('qn');
