--- a/slides.pod
+++ b/slides.pod
@@ -214,15 +214,15 @@ sub treble {
 
 # Using random pitches instead of static
 
-use MIDI::Util qw(setup_score set_chan_patch);  # <- NEW import
-use Music::Scales qw(get_scale_MIDI);  # <- NEW module
+use MIDI::Util qw(setup_score set_chan_patch);  # <- New import
+use Music::Scales qw(get_scale_MIDI);           # <- New module
 
-my $score = setup_score(bpm => 120);  # <- NEW arg
+my $score = setup_score(bpm => 120);            # <- New arg
 
 $score->synch(
     sub { bass($score) },
     sub { treble($score) },
-) for 1 .. 4;  # <- NEW loop!
+) for 1 .. 4;                                   # <- Loop
 
 $score->write_score("$0.mid");
 
