--- a/slides.pod
+++ b/slides.pod
@@ -398,9 +398,9 @@ morbo groovetool.pl  # L<http://127.0.0.1:3000>
 
 =head1 Instantiate a Drummer
 
-=begin pre
+Everything needed to add drums to a MIDI score and more
 
-# Everything needed to add drums to a MIDI score and more
+=begin pre
 
 my $d = MIDI::Drummer::Tiny->new(
   file   => $self->filename,
@@ -421,9 +421,9 @@ my $d = MIDI::Drummer::Tiny->new(
 
 =head1 Figured Bass Part 1 of 3
 
-=begin pre
+Phrase generator for rhythmic motifs
 
-# Phrase generator for rhythmic motifs
+=begin pre
 
 my $phrase = Music::Duration::Partition->new(
   size    => 3,                   # number of beats to render
