--- a/slides.pod
+++ b/slides.pod
@@ -143,7 +143,7 @@ Linked music construction modules are those mentioned in this presentation.
 
 =head1 Basic Algorithms 1 of 2
 
-Setup, Synch, & Write
+# Setup, Synch, & Write
 
 =begin pre
 
@@ -210,7 +210,7 @@ sub treble {
 
 =head1 Basic Algorithms 1 of 3
 
-Using random pitches instead of static
+# Using random pitches instead of static
 
 =begin pre
 
@@ -303,7 +303,7 @@ sub treble {
 
 =head1 Basic Algorithms 1 of 2
 
-Play a list of named chords held for a whole note each
+# Play a list of named chords held for a whole note each
 
 =begin pre
 
@@ -398,7 +398,7 @@ morbo groovetool.pl  # L<http://127.0.0.1:3000>
 
 =head1 Instantiate a Drummer
 
-Everything needed to add drums to a MIDI score and more
+# Everything needed to add drums to a MIDI score and more
 
 =begin pre
 
@@ -421,7 +421,7 @@ my $d = MIDI::Drummer::Tiny->new(
 
 =head1 Figured Bass Part 1 of 3
 
-Phrase generator for rhythmic motifs
+# Phrase generator for rhythmic motifs
 
 =begin pre
 
