--- a/slides.pod
+++ b/slides.pod
@@ -469,11 +469,11 @@ Music::VoiceGen module by Jeremy Mates (AKA thrig) - I know you're out there!
 
 for my $i (1 .. $bars) {
   if ($i % 2) {
-    $phrase->add_to_score($score, $motifs[0], \@voices1);
+    $phrase->add_to_score($drummer->score, $motifs[0], \@voices1);
   }   
   else {
     my @voices2 = map { $voice->rand } $motifs[1]->@*;
-    $phrase->add_to_score($score, $motifs[1], \@voices2);
+    $phrase->add_to_score($drummer->score, $motifs[1], \@voices2);
   }   
 
   $drummer->rest($drummer->quarter);  # SAME as $score->r('qn');
