--- a/slides.pod
+++ b/slides.pod
@@ -8,7 +8,7 @@ L<Gene Boggs|https://github.com/ology>
 <br>
 <audio controls><source type="audio/mp3" src="Eno-2_2.mp3"></audio>
 <br>
-<span style="font-size: medium;">- exerpt from <a href="http://en.wikipedia.org/wiki/Brian+Eno">Brian Eno</a> - "Music For Airports"</span>
+<span style="font-size: medium;">- <a href="http://en.wikipedia.org/wiki/Brian+Eno">Brian Eno</a> - exerpt from "Music For Airports"</span>
 
 =end html
 
