--- a/slides.pod
+++ b/slides.pod
@@ -496,13 +496,15 @@ L<on GitHub|https://github.com/ology/Perl-Algorithmic-Music>
 
 L<Perl Algorithmic Composition Tutorial|https://github.com/ology/MIDI-Perl-HOWTO/wiki>
 
+The L<#perl-music|irc://irc.perl.org:6667/#perl-music> IRC channel
+
 The L<Groove-Tool|https://github.com/ology/Groove-Tool>,
 L<Rock-Tool|https://github.com/ology/Rock-Tool> and
 L<Jazz-Tool|https://github.com/ology/Jazz-Tool> on GitHub
 
 My experiments with MIDI-Perl are L<on GitHub|https://github.com/ology/Music/>
 
-Shameless plug: My L<latest album "XI"|https://ology.net/XI/> is on youtube, spotify, apple music, etc.,
+Shameless plug: My L<latest album "XI"|https://ology.net/XI/> - youtube, spotify, apple music, etc.
 and includes the partially algorithmic tune
 "L<Permutational|https://www.youtube.com/watch?v=dhXMhaMcgag>"
 - Check it out!
