--- a/slides.pod
+++ b/slides.pod
@@ -110,15 +110,15 @@ Musical creation in and of itself!
 
 =item *
 
+To make fragments for a larger context
+
+=item *
+
 To satisfy curiosities
 
 =item *
 
 For practice and study, with etudes and rhythms
-
-=item *
-
-To make and import fragments into a larger context, like a digital audio workstation ("DAW")
 
 =back
 
