--- a/slides.pod
+++ b/slides.pod
@@ -106,7 +106,7 @@ But it took way too long before getting to the algorithms!
 
 =item *
 
-Musical creation in and of itself!
+Creation in and of itself!
 
 =item *
 
