--- a/slides.pod
+++ b/slides.pod
@@ -110,7 +110,7 @@ Creation in and of itself!
 
 =item *
 
-To make fragments for a larger context
+To make fragments for a larger context - Like a symphony, or game.
 
 =item *
 
