--- a/slides.pod
+++ b/slides.pod
@@ -114,7 +114,7 @@ To make fragments for a larger context - Like a symphony, or game
 
 =item *
 
-To satisfy curiosities
+To satisfy curiosities - Like "juxtaposition of beats" for instance
 
 =item *
 
