--- a/slides.pod
+++ b/slides.pod
@@ -114,7 +114,7 @@ To make fragments for a larger context - Like a symphony, or game
 
 =item *
 
-To satisfy curiosities - Like "juxtaposition of beat patterns" for instance
+To satisfy curiosities - "What are all possible juxtapositions of beat patterns?"
 
 =item *
 
