--- a/slides.pod
+++ b/slides.pod
@@ -114,7 +114,7 @@ To make fragments for a larger context - Like a symphony, or game
 
 =item *
 
-To satisfy curiosities - "What are all possible juxtapositions of beat patterns?"
+To satisfy curiosities - "What do juxtapositions of beat patterns sound like?"
 
 =item *
 
