--- a/slides.pod
+++ b/slides.pod
@@ -96,9 +96,7 @@ G<https://placekitten.com/500/500>
 
 =begin note
 
-This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc.
-
-But it took way too long!
+This presentation used to have a bunch more words - concepts, descriptions, types, and techniques, etc. But it took way too long!
 
 =end note
 
