--- a/slides.pod
+++ b/slides.pod
@@ -160,7 +160,7 @@ How do you structure a tune?
 
 These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
 
-If we don't care about traditions, then anything goes (and MIDI is probably not your thing)!
+If we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
 The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.
 
