--- a/slides.pod
+++ b/slides.pod
@@ -20,7 +20,7 @@ The first part will cover some concepts, which I will try to whip-though, so we 
 
 These slides are live at my github link on the bottom of each page, if you want to follow along or reread what just happened.
 
-Also my cards have a QR link to my github page that has a link to this slideshow.
+Also my cards have a QR link to my github that has a link to this slideshow.
 
 =end note
 
