--- a/slides.pod
+++ b/slides.pod
@@ -1,6 +1,6 @@
 =head1 Algorithmic Music with Perl
 
-G<https://ology.net/images/perl-gene.jpg> L<Gene Boggs|https://github.com/ology>
+G<https://ology.github.io/Perl-Algorithmic-Music/github-qr.jpg> L<Gene Boggs|https://github.com/ology>
 
 =begin html
 
