--- a/slides.pod
+++ b/slides.pod
@@ -94,7 +94,7 @@ G<https://placekitten.com/500/500>
 
 =begin note
 
-This used to have a bunch more words: concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.
+Also, this used to have a bunch of concepts, descriptions, types, and techniques. But it took way too long! See the OLD/ directory, in the github repo.
 
 =end note
 
@@ -152,9 +152,9 @@ How do you structure a tune?
 
 These are the questions we will have to answer if we want to create algorithmic music that follows traditional theory.
 
-If we don't care about traditions, then anything goes. And MIDI is probably not your thing.
+But if we don't care about traditions, then anything goes. And MIDI is probably not your thing.
 
-The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar.
+The idea of phrase development itself is controversial. E.g. Brian Eno, Primus guitar solos.
 
 There are as many answers as there are musicians. (And there are more ways to make algorithmic music than there are programmers.)
 
